--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>AK Özgrup Online Store</title>
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap"
@@ -361,11 +362,11 @@
         data-price="310"
       >
         <div class="product-img-container">
-          <img src="assets/shanimli.jpg" alt="Shantamarind chutney" />
+          <img src="assets/shanimli.jpg" alt="Shan tamarind chutney" />
         </div>
         <div class="product-details">
-          <h3 data-en="Shantamarind chutney" data-tr="Ekşi ezme">
-            Shantamarind chutney
+          <h3 data-en="Shan tamarind chutney" data-tr="Ekşi ezme">
+            Shan tamarind chutney
           </h3>
           <p data-en="Price: ₺310" data-tr="Fiyat: ₺310">Price: ₺310</p>
           <div class="order-controls">
