Naweed Update the code

--- a/index.html
+++ b/index.html
@@ -2704,6 +2704,6 @@
     <!-- EmailJS -->
     <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
     <!-- Custom JS -->
-    <script src="script.js"></script>
+    <script src="script.js" defer></script>
   </body>
 </html>
