--- a/index.html
+++ b/index.html
@@ -1818,10 +1818,10 @@
         data-price="75"
       >
         <div class="product-img-container">
-          <img src="assets/Kewra.jpg" alt="Kewra" />
+          <img src="assets/kewra.jpg" alt="kewra" />
         </div>
         <div class="product-details">
-          <h3 data-en="Kewra" data-tr="Kewra">Kewra</h3>
+          <h3 data-en="Kewra" data-tr="Kewra">kewra</h3>
           <p data-en="Price: ₺75" data-tr="Fiyat: ₺75">Price: ₺75</p>
           <div class="order-controls">
             <input type="number" min="1" value="1" class="qty" />
